--- a/user/public/index.html
+++ b/user/public/index.html
@@ -12,6 +12,7 @@
     <div id="app"></div>
     
     <script src="https://unpkg.com/vue@next"></script>
+    <script src="axios.min.js"></script>
     <script src="index.js"></script>
 
   </body>
