Implement presentation request

--- a/user/public/index.html
+++ b/user/public/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <meta>
-    <meta charset="UTF-8">
-    <title>Hello World in Vue.js</title>
-  </meta>
+  <meta charset="UTF-8">
+  <title>Verifiable Credentials Demo</title>
 
   <link href="bootstrap.min.css" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
