--- a/user/public/index.html
+++ b/user/public/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <meta charset="UTF-8">
-  <title>Verifiable Credentials Demo</title>
+  <header>
+    <meta charset="UTF-8">
+    <title>Verifiable Credentials Demo</title>
 
-  <link href="bootstrap.min.css" rel="stylesheet">
-  <link href="style.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" />
+    <link href="style.css" rel="stylesheet">
+  </header>
   <body>
     <div id="app"></div>
     
