Final little updates

--- a/user/client/public/index.html
+++ b/user/client/public/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" />
 
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Verifiable Credentials Demo</title>
   </head>
   <body>
     <noscript>
